[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "life-model"
dynamic = ["version"]
description = "Modeling life events and how they impact finances"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Spencer Williams", email = "sw23@users.noreply.github.com" }]
dependencies = [
    "pandas",
    "matplotlib",
    "mesa>=3.3",
    "networkx",
    "pyyaml",
    "pydantic>=2",
    "jinja2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7",
    "furo",
    "myst-parser",
]

[project.urls]
Homepage = "https://github.com/sw23/life-model"

[tool.setuptools]
# Only ship data explicitly declared below; otherwise setuptools-scm's VCS file
# finder sweeps every tracked file (including tests/) into the wheel.
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["life_model.tests*"]

[tool.setuptools.package-data]
"life_model.config" = ["data/*.yaml", "data/scenarios/*.yaml"]

[tool.setuptools_scm]
version_file = "src/life_model/_version.py"

[tool.check-wheel-contents]
# Empty __init__.py package markers are byte-identical; W002 flags them as
# "duplicate files", which is a false positive here.
ignore = ["W002"]

[tool.ruff]
line-length = 120
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
# Default rules (E, F) plus isort import sorting.
extend-select = ["I"]

[tool.mypy]
ignore_missing_imports = true
# Lenient during Phase 0/1; strict flags will be enabled as later plans land.
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["src/life_model/tests"]
markers = [
    "notebooks: end-to-end Jupyter notebook execution tests (slow; run in a dedicated CI job)",
    "documentation: documentation-related tests",
]

[tool.coverage.run]
source = ["life_model"]
branch = true
omit = [
    "*/tests/*",
    "*/_version.py",
]

[tool.coverage.report]
fail_under = 84
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "return NotImplemented",
    "if 0:",
    "if False:",
    "if __name__ == .__main__.:",
    "while 0:",
    "while False:",
]
